style.css
#container {
    display: flex;
    max-width: 1200px;
    align-self: center;
    margin: 50px 0px
}
.result,
.game-result,
.round{
    color: whitesmoke;
    text-align: center;
    font-size: 25px;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
}
#container>div{
    display: flex;
    flex-direction: column;
    flex: 1;
}
button{
    min-height: 50px;
    color: whitesmoke;
    background-color: black;
    border: none;
    font-family: 'Courier New', Courier, monospace;
    font-size: 25px;
}
button:hover{
    font-size: 35px;
    cursor: pointer;
}
img{
    width: 100%;
    height: 100%;
}
body{
    margin: 0;
    background-color: black;
    display: flex;
    flex-direction: column;
    align-items: center;
}
h1{
    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    font-size: 50px;
    background-color:black;
    color: whitesmoke;
    margin: 50px;
    margin-bottom: 0;
    height: 100px;
    text-align: center;
}

